# virtual-switch-hosts

./: .eslintrc-auto-import.json  .gitignore  .prettierrc  .rustfmt.toml  .taplo.toml  README.md  latest.md  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  typed-router.d.ts  vite.config.ts
.github/workflows/: android.yml  release.yml
mitm/: Cargo.toml
mitm/src/: body.rs  decoder.rs  error.rs  lib.rs  noop.rs  rewind.rs
mitm/src/certificate_authority/: mod.rs  openssl_authority.rs
mitm/src/proxy/: builder.rs  internal.rs  mod.rs
src/: App.vue  global.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tauri_error.rs  virtual_hosts.rs
src/components/: AppBack.vue  AppHeader.vue  AppSideMenu.vue  ResultPop.vue  RouterStack.vue  RouterStackView.vue  Start.vue
src/composables/: useAppRouter.ts  useZIndex.ts
src/i18n/: index.ts
src/i18n/lang/: base.ts  en-US.ts  zh-CN.ts
src/layouts/: default.vue
src/pages/: Setting.vue  home.vue
src/router/: index.ts
src/stacks/: add.vue  search.vue
src/store/: global.ts  hosts.ts
src/utils/: bindings.ts  storage.ts  theme.ts
tauri-plugin-hosts/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-hosts/android/: build.gradle.kts
tauri-plugin-hosts/android/src/main/: AndroidManifest.xml
tauri-plugin-hosts/android/src/main/java/: HostsPlugin.kt  MyVpnService.kt
tauri-plugin-hosts/guest-js/: index.ts
tauri-plugin-hosts/ios/: Package.swift  README.md
tauri-plugin-hosts/ios/Sources/: ExamplePlugin.swift
tauri-plugin-hosts/permissions/autogenerated/: reference.md
tauri-plugin-hosts/permissions/autogenerated/commands/: get_app_list.toml
tauri-plugin-hosts/permissions/schemas/: schema.json
tauri-plugin-hosts/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
