[package]
description = "MITM HTTP/S proxy"
edition     = "2021"
name        = "mitm"
version     = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# TODO
# hyper-util 0.1.9 有问题
[dependencies]
async-compression = { version = "0.4.13", features = [
	"brotli",
	"gzip",
	"tokio",
	"zlib",
	"zstd"
] }
aws-lc-rs = "1.12.0"
bstr = "1.10.0"
futures = "0.3.31"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-rustls = { version = "0.27.3", default-features = false, features = [
	"http1",
	"http2",
	"logging",
	"ring",
	"tls12",
	"webpki-roots",
	"webpki-tokio"
] }
hyper-throttle = { version = "0.1.1", features = ["hyper-util"] }
hyper-tls = { version = "0.6.0" }
hyper-tungstenite = "0.15.0"
hyper-util = { version = "=0.1.8", features = [
	"client",
	"client-legacy",
	"http1",
	"server"
] }
moka = { version = "0.12.8", features = ["future"] }
openssl = { version = "0.10.66", features = ["vendored"] }
rand = { version = "0.8.5" }
rcgen = { version = "0.13.1", features = ["x509-parser"] }
thiserror = "1.0.64"
time = { version = "0.3.36" }
tokio = { version = "1.40.0", features = ["macros", "rt"] }
tokio-graceful = "0.2.2"
tokio-native-tls = "0.3.1"
tokio-rustls = "0.26.0"
tokio-tungstenite = { version = "0.24.0", features = [
	"native-tls",
	"rustls-tls-webpki-roots"
] }
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
async-http-proxy    = { version = "1.2.5", features = ["runtime-tokio"] }
criterion           = { version = "0.5.1", features = ["async_tokio"] }
reqwest             = "0.12.8"
rustls-native-certs = "0.8.0"
rustls-pemfile      = "2.2.0"
tokio               = { version = "1.40.0", features = ["full"] }
tokio-native-tls    = "0.3.1"
tracing-subscriber  = "0.3.18"
x509-parser         = "0.16.0"
