[package]
authors     = ["you"]
description = "A Tauri App"
edition     = "2021"
name        = "virtual-switch-hosts"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["cdylib", "rlib", "staticlib"]
name       = "virtual_switch_hosts_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
http               = "1.2.0"
hyper              = "1.5.2"
lazy_static        = "1.5.0"
log                = "0.4.22"
mitm               = { path = "../mitm" }
portpicker         = "0.1.1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
specta             = "=2.0.0-rc.20"
specta-typescript  = "0.0.7"
tauri              = { version = "2", features = [] }
tauri-plugin-hosts = { path = "../tauri-plugin-hosts" }
tauri-plugin-log   = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-specta       = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
thiserror          = "2.0.7"
tokio              = { version = "1.42.0", features = ["full"] }
